Fix layout issues in masthead

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -363,16 +363,3 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a,
       display: none;
     }
   }
-
-/*
-   // 修改容器最大宽度
-   ========================================================================== */
-
-.container {
-  max-width: 100%;  // 如果要取消最大宽度限制
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-}
-
-
