--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -333,7 +333,6 @@
   }
 }
 
-
 .comment__avatar {
   width: 40px;
   height: 40px;
@@ -347,26 +346,14 @@
   }
 }
 
-// .comment__content-wrapper {
-//   float: right;
-//   width: calc(100% - 60px);
-
-//   @include breakpoint($large) {
-//     width: calc(100% - 100px);
-//   }
-// }
-
 .comment__content-wrapper {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  padding-right: 40px;
+  float: right;
+  width: calc(100% - 60px);
 
   @include breakpoint($large) {
-    padding-right: 60px;
+    width: calc(100% - 100px);
   }
 }
-
 
 .comment__author {
   margin: 0;
